@@ -5,7 +5,7 @@ License
 
 The MIT License (MIT)
 
-Copyright (c) 2018-2021  Patricio Cubillos
+Copyright (c) 2018-2022  Patricio Cubillos
 
 Permission is hereby granted, free of charge, to any person obtaining a copy
 of this software and associated documentation files (the "Software"), to deal
